cluster/apps/media/lidarr/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr-ingress
  namespace: media
  annotations:
    hajimari.io/icon: lucide:audio-lines
    hajimari.io/enable: true
    hajimari.io/appName: "Lidarr"
    hajimari.io/group: "Media"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: lidarr.${SECRET_LOCAL_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lidarr-svc
            port:
              number: 80
  tls:
  - hosts: 
    - lidarr.${SECRET_LOCAL_DOMAIN}
    secretName: lidarr-ingress-certs
